[package]
name = "spacetime"
version = "0.1.0"
authors = ["smudgecat123 <jf14218@my.bristol.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.24"
shaderc = "0.7"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
futures = "0.3"

[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]
