[package]
name = "spacetime"
version = "0.1.0"
authors = ["smudgecat123 <jf14218@my.bristol.ac.uk>"]
edition = "2018"

[dependencies]
image = "0.23"
winit = "0.24"
# shaderc = "0.7" # REMOVED!
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
wgpu = "0.8"
futures = "0.3"

# NEW!
[build-dependencies]
glob = "0.3"
fs_extra = "1.2"
anyhow = "1.0"
